--- a/PhoenixVPN/View/ServerCell.xib
+++ b/PhoenixVPN/View/ServerCell.xib
@@ -5,38 +5,37 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SingleServerCell" rowHeight="55" id="KGk-i7-Jjw" customClass="ServerCell" customModule="VOXEN" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="55"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SingleServerCell" rowHeight="80" id="KGk-i7-Jjw" customClass="ServerCell" customModule="VOXEN" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="55"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Gs-cD-dBU">
-                        <rect key="frame" x="16" y="10" width="234" height="35"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <rect key="frame" x="16" y="10" width="234" height="60"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VSl-1W-00R">
-                        <rect key="frame" x="210" y="10" width="100" height="35"/>
-                        <color key="backgroundColor" red="0.0" green="0.61917728189999999" blue="0.86879318949999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VSl-1W-00R">
+                        <rect key="frame" x="210" y="10" width="100" height="60"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="35" id="6WH-aA-evU"/>
+                            <constraint firstAttribute="height" constant="60" id="6WH-aA-evU"/>
                             <constraint firstAttribute="width" constant="100" id="PF5-JT-51m"/>
                         </constraints>
-                        <state key="normal" title="Connect">
+                        <state key="normal" title="Connect" backgroundImage="sssss">
                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         </state>
                     </button>
                 </subviews>
-                <color key="backgroundColor" red="0.099370904270000004" green="0.14017239209999999" blue="0.31468152999999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="VSl-1W-00R" secondAttribute="bottom" constant="10" id="6fd-ca-klr"/>
                     <constraint firstItem="VSl-1W-00R" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="GQo-Qq-gKM"/>
@@ -48,17 +47,16 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <color key="backgroundColor" systemColor="systemIndigoColor"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <connections>
                 <outlet property="connectionButton" destination="VSl-1W-00R" id="ui8-uw-OtZ"/>
                 <outlet property="serverName" destination="3Gs-cD-dBU" id="dxW-h4-wpX"/>
             </connections>
-            <point key="canvasLocation" x="-17.39130434782609" y="37.165178571428569"/>
+            <point key="canvasLocation" x="-17.39130434782609" y="45.535714285714285"/>
         </tableViewCell>
     </objects>
     <resources>
-        <systemColor name="systemIndigoColor">
-            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <image name="sssss" width="821" height="222"/>
     </resources>
 </document>
